[package]
name = "dotfiles_importer"
version = "0.1.0"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.13.12"
log = "0.4"
env_logger = "0.8.1"
notify-rust = "4"
lazy_static = "1.4.0"
regex = "1"